feat(p1): add POST /api/knowledge/import/batch